--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="This is a working contact form made by [@MustafaXD](https://github.com/MustafaTheCoder)!">
+    <meta name="description" content="This is a working contact form made by @MustafaXD!">
     <title>MustafaXD | Contact Form</title>
     <link rel="stylesheet" href="index.css">
     <link rel="icon" href="https://media.discordapp.net/attachments/985274690060824606/986704210236158082/unknown.png?width=559&height=559">
